k8s/update/update-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: update-deployment
  namespace: p-spring-update
  labels:
    app: update-product
spec:
  replicas: 1
  selector:
    matchLabels:
      app: update-product
  template:
    metadata:
      labels:
        app: update-product
    spec:
      nodeSelector:
        workload: update
      imagePullSecrets:
        - name: dockerhub-secret
      containers:
        - name: update-container
          image: alejandro411/p_spring_update:latest
          ports:
            - containerPort: 8080
