k8s/update/update-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: update-pod
  namespace: p-spring-update
  labels:
    app: update-product
spec:
  nodeSelector:
    workload: update
  imagePullSecrets:
    - name: dockerhub-secret
  containers:
    - name: update-container
      image: alejandro411/p_spring_update:latest
      ports:
        - containerPort: 8080
