k8s/update/update-service.yml
apiVersion: v1
kind: Service
metadata:
  name: update-service
  namespace: p-spring-update
  labels:
    app: update-product
spec:
  selector:
    app: update-product
  ports:
    - protocol: TCP
      port: 8084
      targetPort: 8080
  type: ClusterIP
