k8s/update/update-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: update-ingress
  namespace: p-spring-update
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - path: /actualizar(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: update-service
                port:
                  number: 8084
